--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+# Optimizer settings
+solc = "0.8.28"
+optimizer = true
+optimizer_runs = 1000_000
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
